k8s/digital-labs-bff-service-deployment.yml
apiVersion: apps/v1beta2 # for versions before 1.8.0 use apps/v1beta1
kind: Deployment
metadata:
  name: digital-labs-bff-service-deployment
spec: 
  replicas: 1
  selector:
    matchLabels:
      app: digital-labs-bff-service
  template:
    metadata:
      labels:
        app: digital-labs-bff-service
    spec:
      containers:
      - name: digital-labs-bff-service
        image: techtrainigcenter/digital-labs-bff-service:1.0
        ports:
        - containerPort: 8080
        readinessProbe:
          tcpSocket: 
            port: 8080
          initialDelaySeconds: 20
          periodSeconds: 10
        imagePullPolicy: Always
        resources:
          requests:
            memory: "256Mi"
            cpu: "0.25"
          limits: 
            memory: "1Gi" 
            cpu: "1"
