k8s/digital-labs-bff-service-service.yml
apiVersion: v1
kind: Service
metadata:
  name: digital-labs-bff-service
spec:
  ports:
  - name: "http"
    port: 8080
    targetPort: 8080
  selector:
    app: digital-labs-bff-service
  type: NodePort
